# WaffleEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: engine.hpp
src/: engine.cpp
tests/: CMakeLists.txt
